# university-lab-4

./: #linked-list.cpp#  .#linked-list.cpp  CMakeLists.txt  linked-list.cpp  main.cpp  node.cpp
include/: node-list.h  node.h
